# python-template-repo

./: .coveragerc  .env.local  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  components.md  conversation.json  fix_lint.sh  fix_long_lines.py  manual_test_results.csv  mypy.ini  nose2.cfg  nose2.cfg.bak  pyproject.toml  pytest.ini  requirements.txt  run_lint.py  setup.cfg  setup.py  test_report.csv  test_spam_results.csv
.circleci/: config.yml  lint.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: INTERFACE.md
src/: __init__.py  calculator.py  logger.py  main.py  notifier.py
src/components/: __init__.py
src/components/ai_conversation_client/: __init__.py  api.py  cerebras_client.py  cli.py  example.py  factory.py  interface.py  mock_client.py  py.typed  pyproject.toml  test_client.py
src/components/ai_conversation_client/tests/: __init__.py  test_ai_client.py  test_cerebras_client.py  test_cli.py  test_interface.py
src/components/calculator/: __init__.py  api.py  calculator.py  implementation.py  pyproject.toml  test_calculator.py
src/components/calculator/tests/: __init__.py  test_calculator.py
src/components/logger/: __init__.py  api.py  implementation.py  logger.py  pyproject.toml  test_logger.py
src/components/logger/tests/: __init__.py  test_logger.py
src/components/notifier/: __init__.py  api.py  implementation.py  notifier.py  pyproject.toml  test_notifier.py
src/components/notifier/tests/: __init__.py  test_notifier.py
src/integration/: email_analyzer.py
test-results/: coverage.xml  junit.xml
tests/: manual_ai_spam_test.py  test_calculator.py  test_logger.py  test_notifier.py
tests/EndToEnd/: test_e2e.py
tests/Integration/: test_calculator_logger_integration.py  test_cli.py  test_email_spam_detection.py  test_logger_notifier_integration.py  test_main.py
tests/e2e/: test_workflow.py
tests/end_to_end/: __init__.py  test_email_spam_e2e.py
tests/unit/: test_calculator.py  test_logger.py  test_notifier.py
