[tool.ruff]
target-version = "py38"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["venv", "env", ".env", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "W",  # warnings
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ANN401",  # Dynamically typed expressions are disallowed
]

[tool.ruff.lint.per-file-ignores]
# Add any other ignore patterns here if needed, but no E501

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "src/components/calculator/tests",
    "src/components/logger/tests",
    "src/components/notifier/tests"
]

[project]
name = "python-template-repo"
version = "0.1.0"
description = "Python template repository"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "uv",
    "nose2[coverage_plugin]",
    "coverage",
    "black",
    "flake8",
    "bandit",
    "types-requests",
    "pytest-stub",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
