[project]
name = "python-template-repo"
version = "0.1.0"
description = "Python template repository"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "uv",
    "coverage",
    "black",
    "flake8",
    "bandit",
    "pytest-xdist"
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "D", "ANN"]
ignore = ["D100", "D104", "D107", "ANN101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "src/components/ai_conversation_client/tests"
]

[tool.mypy]
plugins = ["typeshed_client.plugin"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"