[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "Calculator component for performing basic arithmetic operations."
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "pytest",
    "ruff",
    "mypy",
    "coverage",
    "uv"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
strict = true
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["calculator"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.setuptools.packages.find]
where = ["."]
include = ["calculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
index-url = "https://pypi.org/simple"
