[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notifier"
version = "0.1.0"
description = "Notifier component for sending alerts when threshold is exceeded."
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "pytest",
    "ruff",
    "mypy",
    "coverage",
    "uv",
    "jsonschema"  # To validate notifications structure
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
strict = true
disallow_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["notifier"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.setuptools.packages.find]
where = ["."]
include = ["notifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
index-url = "https://pypi.org/simple"
